# DotfilesLegacy

./: .bashrc  .zshrc  starship.toml
alacritty/: alacritty.toml
cosmic/: Dark.ron
cosmic/com.system76.CosmicAppList/v1/: favorites
cosmic/com.system76.CosmicBackground/v1/: all
cosmic/com.system76.CosmicComp/v1/: xkb_config
cosmic/com.system76.CosmicPanel.Dock/v1/: plugins_wings
cosmic/com.system76.CosmicPanel.Panel/v1/: plugins_wings
cosmic/com.system76.CosmicPortal/v1/: screenshot
cosmic/com.system76.CosmicSettings.Shortcuts/v1/: custom
cosmic/com.system76.CosmicSettings.Wallpaper/v1/: current-folder  custom-images  recent-folders
cosmic/com.system76.CosmicTerm/v1/: font_name
cosmic/com.system76.CosmicTheme.Dark.Builder/v1/: accent  bg_color  text_tint
cosmic/com.system76.CosmicTheme.Dark/v1/: accent  accent_button  accent_text  background  button  destructive  destructive_button  icon_button  link_button  primary  secondary  success  text_button  warning  warning_button
cosmic/com.system76.CosmicTk/v1/: icon_theme
hypr/: hyprland.lua
python_uv_ml_global/: pyproject.toml
qtile/: config.py  config_antigua.py
vscode_profile/: Cubos.code-profile
